# AC-UNIZA-skiteam-booking-system

./: .bumpversion.cfg  .env.ci  .env.dev  .gitignore  .pre-commit-config.yaml  .versionrc  CHANGELOG.md  Dockerfile  ISSUE_TEMPLATE.md  Pipfile  README.md  TODO's  docker-compose-ci.yml  docker-compose-prod-https.yml  docker-compose-prod-proxy.yml  docker-compose-prod.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  jsconfig.json  production.yml  requirements.txt  staging.yml
ManagementSystem/: settings.py  (+1 more)
backend/: .flake8  Dockerfile  Dockerfile.dev  Pipfile  backend_setup.sh  manage.py  pyproject.toml
backend/app/: urls.py  wsgi.py
backend/app/settings/: dev.py
backend/apps/events/: admin.py  models.py
backend/apps/events/api/: permissions.py  serializers.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py  0002_auto_20200410_2249.py  0002_auto_20201013_1042.py  0002_auto_20201013_1558.py  0002_auto_20201027_2114.py  0003_auto_20200411_0008.py  0003_auto_20201027_1241.py  0003_eventtype.py  0004_auto_20201027_2125.py  0005_auto_20201027_2212.py  0006_auto_20200428_1341.py  0006_auto_20201027_2218.py  0007_auto_20200515_1527.py  0007_auto_20201027_2236.py  0008_auto_20201027_2244.py  0008_raceorganizer_website.py  0009_auto_20201027_2245.py  0010_auto_20201027_2326.py  0011_auto_20201028_1510.py  0012_eventtype_average_time.py  0013_auto_20201028_1927.py  0014_location_need_ski.py  0015_auto_20201102_1924.py  0016_auto_20201104_1504.py  0017_accommodation_price.py  0018_auto_20201104_1605.py  0019_event_group_id.py  0020_auto_20201106_2234.py  0021_auto_20201106_2240.py  0022_auto_20201109_2252.py  0023_auto_20201118_1740.py  0024_event_all_day.py  0025_auto_20201223_0935.py
backend/apps/family/: admin.py  apps.py  models.py
backend/apps/family/api/: permissions.py  serializers.py  urls.py  views.py
backend/apps/family/migrations/: 0001_initial.py  0002_child_familymember.py  0003_family_token.py
backend/apps/family/tests/: test_family_api.py
backend/apps/stats/: admin.py  apps.py  models.py
backend/apps/stats/api/: serializers.py  urls.py  views.py
backend/apps/stats/migrations/: 0001_initial.py
backend/apps/users/: admin.py  apps.py  forms.py  mails.py  models.py  signals.py
backend/apps/users/api/: permissions.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_auth_api.py
backend/config/: api.py  settings.py  urls.py  wsgi.py
backend/core/: adapter.py  auth.py  choices.py  mixins.py  permissions.py  utils.py  views.py
backend/events/: admin.py  models.py
backend/events/api/: serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_auto_20200320_2246.py  0002_auto_20200322_1243.py  0002_auto_20200324_1035.py  0002_auto_20200324_2229.py  0002_auto_20200329_1232.py  0002_auto_20200330_1950.py  0002_auto_20200405_0956.py  0002_auto_20200405_1638.py  0002_auto_20200405_2002.py  0002_auto_20200407_1342.py  0003_auto_20200324_1037.py  0003_auto_20200325_1457.py  0003_auto_20200330_1953.py  0003_auto_20200403_2236.py  0003_auto_20200405_1948.py  0004_auto_20200324_1040.py  0004_auto_20200325_1635.py  0004_auto_20200330_1957.py  0004_auto_20200405_1949.py  0004_auto_20200411_2227.py  0005_auto_20200325_1711.py  0005_auto_20200404_0809.py  0005_auto_20200412_1722.py  0006_auto_20200325_1716.py  0007_auto_20200326_2029.py  0008_auto_20200326_2036.py  0009_auto_20200329_0026.py  0010_auto_20200329_0033.py  0011_auto_20200329_0046.py
backend/family/: admin.py  models.py
backend/family/api/: serializers.py  urls.py  views.py
backend/family/migrations/: 0001_initial.py  0002_child_familymember.py  0003_auto_20200322_1358.py  0004_child_categories.py  0005_auto_20200326_2049.py  0006_child_events.py  0007_remove_child_events.py
backend/family/tests/: test_child_api.py  test_family_permissions.py
backend/scripts/: entrypoint.sh  gunicorn.sh  start.sh
backend/sportagenda/apps/events/: admin.py  apps.py  models.py
backend/sportagenda/apps/family/: admin.py  apps.py  models.py
backend/sportagenda/config/: api.py  settings.py  urls.py  wsgi.py
backend/sportagenda/core/: auth.py  utils.py  views.py
backend/static/email/: event_recreated.html  user_reset_password.html
backend/static/js/: serviceworker.js
backend/templates/: application.html  base.html  index-dev.html  index.html
backend/users/: admin.py  forms.py  mails.py  models.py  signals.py
backend/users/api/: serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_auto_20200323_1055.py  0002_auto_20200329_1804.py  0003_auto_20200324_0906.py  0003_auto_20200329_1817.py  0003_auto_20200329_1852.py  0004_auto_20200324_0908.py  0005_profile_user_role.py  0006_remove_profile_gender.py  0007_auto_20200324_0921.py  0008_profile_events.py  0009_auto_20200329_0033.py  0010_auto_20200329_0046.py
backend/users/tests/: test_auth_api.py
(+497 files in other folders)
